@startuml

Mario o-- EstadoMario
EstadoMario <|-- MarioFuego
EstadoMario <|-- MarioChiquito
EstadoMario <|-- SuperMario
EstadoMario <|-- MarioMuerto

class Bloque {
	-sano: boolean
	+golpear(): void
	+estaSano(): boolean
}

class Mario {
	-estado: EstadoMario
	+hit(): void
	+comerHongo(): void
    +tocarFlor(): void
    +golpearBloque(Bloque): void
    +recogerMoneda(): void
}
abstract class EstadoMario {
	+hit(): void
	+comerHongo(): void
    +tocarFlor(): void
    +golpearBloque(Bloque): void
    +recogerMoneda(Mario): void
}

class MarioFuego {
	+hit(): void
	+comerHongo(): void
    +tocarFlor(): void
}

class MarioChiquito{
    +hit(): void
	+comerHongo(): void
	+golpearBloque(Bloque): void
    +recogerMoneda(Mario): void
}

class SuperMario {
    +hit(): void
	+tocarFlor(): void
}

class MarioMuerto {
	+golpearBloque(Bloque): void
    +recogerMoneda(Mario): void
}
@enduml
